[tool.poetry]
name = "jsp_exp"
version = "0.1.3"
description = "ジョブショップスケジューリング問題をpythonのクラスで表現"
authors = ["鈴木貴大 <merioda.seven.24@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
